# gcp-server-environments

./: .gitattributes  .gitignore  README.md  requirements.txt
.github/workflows/: ci.yaml
app_engine_flex/: .gcloudignore  README.md  app.yaml  main.py  pyproject.toml  requirements.txt
app_engine_standard/: README.md  app.yaml  main.py  pyproject.toml  requirements-ci.txt  requirements.txt  ru_proverbs
cloud_functions/: .gcloudignore  README.md  deploy.bat  deploy.sh  main.py  pyproject.toml  requirements.txt
cloud_run/: .dockerignore  .gcloudignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
compute_engine/: README.md  install-packer.sh  main.py  mypy.ini  pyproject.toml  requirements.txt
compute_engine/gce/: .gitignore  _setup-load-balancer.sh  _setup-managed-group.sh  _setup-network.sh  main.tf  network.tf  outputs.tf  providers.tf  setup-python-runner.sh  startup-script.sh  variables.tf  versions.tf
compute_engine/packer/: _create-logging-configuration.sh  _install-logging-agent.sh  _install-monitoring-agent.sh  _install-tools.sh  _setup-user.sh  create-image.sh  gce-runner.json
ru_proverbs/: .gitignore  LICENSE  README.md  generator.py  requirements.txt  ru_proverbs.txt  setup.py
ru_proverbs/ru_proverbs/: ru_proverbs_chars_config.json  ru_proverbs_chars_vocab.json  ru_proverbs_chars_weights.hdf5
