[tool.poetry]
name = "compute_engine"
version = "1.0.0"
description = "Compute Engine GCP Server Environment."
authors = ["Yurii Serhiichuk <savik.ne@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "2.6.1"
textgenrnn = "2.0.0"
ru-proverbs = "1.1.2"
flask = "2.0.1"
gunicorn = "20.1.0"
python-json-logger = "2.0.2"


[tool.poetry.dev-dependencies]
pylint = "^2.9.3"
black = "^21.7b0"
mypy = "^0.910"

[tool.black]
line-length = 98
target-version = ['py38']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
